[tool.poetry]
name = "instagramanaliz"
version = "0.1.0"
description = "İnstagram kullanıcı analizi yapar"
authors = ["Serhat info@serhat.xyz"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
lxml = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
